<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_editar_manutencao" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_data_agendamento"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edt_data_agendamento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="date"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edt_data_agendamento2"
        android:text="@string/lbl_horario_agendamento" />

    <EditText
        android:id="@+id/edt_horario_agendamento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edt_horario_agendamento2"
        android:text="@string/lbl_notas_obs" />

    <EditText
        android:id="@+id/edt_notas_obs2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edt_notas_obs2"
        android:text="@string/lbl_valor" />

    <EditText
        android:id="@+id/edt_valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnSalvarEdicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edt_valor2"
        android:onClick="btnSalvarEdicao"
        android:text="@string/btn_salvar_edicao"
        android:layout_toStartOf="@+id/btnVoltar"
        android:layout_alignEnd="@+id/textView4"
        style="@style/estiloBtnsalvar"/>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnVoltar"
        android:text="@string/btn_voltar"
        android:layout_below="@+id/edt_valor2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView4"
        style="@style/estiloBtnVoltar"/>

</RelativeLayout>
