<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_status" />

    <EditText
        android:id="@+id/edt_chassi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_status"
        android:layout_toStartOf="@+id/btn_buscar"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lbl_branco" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edt_chassi"
        android:layout_alignBottom="@+id/edt_chassi"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/txt_status"
        android:onClick="btnBuscar"
        android:text="@string/btn_buscar"
        style="@style/estiloBtnBuscar"/>

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="77dp"
        android:onClick="btnVoltar"
        android:text="@string/btn_voltar"
        style="@style/estiloBtnVoltar"/>

    <ListView
        android:id="@+id/lstView_medicoes_chassi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_voltar"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btn_buscar" />
</RelativeLayout>
