<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_manutencoes" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbFiltro"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        style="@style/estiloBtnMenus">

        <RadioButton
            android:id="@+id/rb_manutencoes_agendadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="rbManutencoesAgendadas"
            android:text="@string/rb_manutencao_agendadas" />

        <RadioButton
            android:id="@+id/rb_manutencoes_realizadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_toEndOf="@+id/rb_manutencoes_agendadas"
            android:layout_weight="1"
            android:onClick="rbManutencoesRealizadas"
            android:text="@string/rb_manutencao_realizada" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="75dp"
        android:onClick="btnVoltar"
        android:text="@string/btn_voltar"
        style="@style/estiloBtnVoltar"/>

    <ListView
        android:id="@+id/lstView_manutencoes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_voltar"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rbFiltro" />

</RelativeLayout>
